# Raiku

./: .gitignore  CHANGELOG.md  LICENSE  README.md  _smoke_b3.py  _smoke_new.py  _verify.py  pyproject.toml  requirements.txt  rules.md  setup.py
.github/workflows/: ci.yml  rebuild-index.yml  validate.yml
UserSub/C/cmatrix/: README.md  raiku.toml  version.yml
UserSub/C/cmatrix/src/: cmatrix.c  cmatrix.h
UserSub/CPP/geompp/: README.md  raiku.toml  version.yml
UserSub/CPP/geompp/src/: CMakeLists.txt  geompp.hpp  main.cpp
UserSub/CSharp/sharputils/: README.md  raiku.toml  version.yml
UserSub/CSharp/sharputils/src/: EnumerableExtensions.cs  StringExtensions.cs  sharputils.csproj
UserSub/Go/goqueue/: README.md  raiku.toml  version.yml
UserSub/Go/goqueue/src/: go.mod  queue.go  queue_test.go
UserSub/Java/javastream/: README.md  raiku.toml  version.yml
UserSub/Python/fast-math/: README.md  raiku.toml  version.yml
UserSub/Python/fast-math/src/: fast_math.py
UserSub/Rust/blazing-vec/: README.md  raiku.toml  version.yml
UserSub/Rust/blazing-vec/src/: Cargo.toml  lib.rs
UserSub/Zig/zigutils/: README.md  raiku.toml  version.yml
UserSub/Zig/zigutils/src/: build.zig  (+1 more)
cli/: __init__.py  __main__.py  main.py
cli/commands/: audit.py  bench.py  cache_cmd.py  completion.py  config_cmd.py  diff.py  doctor.py  export_cmd.py  from_lock.py  graph.py  index_cmd.py  info.py  init_cmd.py  install.py  interactive.py  lint.py  list_cmd.py  login.py  outdated.py  pin_cmd.py  publish.py  repair.py  rollback.py  run_cmd.py  search.py  stats.py  sync.py  test_cmd.py  trust_cmd.py  uninstall.py  update.py  upgrade.py  validate.py  verify_cmd.py  why.py
core/: __init__.py  cache.py  config.py  constants.py  lockfile.py  pins.py  resolver.py  templates.py  trust.py
docs/: cli-reference.md  contributing.md  package-format.md  security.md
index/: __init__.py  index.json  index_manager.py
installer/: __init__.py  build_runner.py  cache_store.py  fetcher.py
parser/: __init__.py  toml_parser.py  yaml_parser.py
schemas/: schema.yml
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_index.py  test_parser.py  test_validator.py
validator/: __init__.py  hash_validator.py  rules_checker.py  schema_validator.py
(+1 files in other folders)
