[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "raiku"
version = "1.0.0"
description = "Community-driven, Git-based, multi-language package ecosystem CLI"
authors = [{ name = "Raiku Community", email = "community@raiku.dev" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["package-manager", "cli", "multi-language", "open-source"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "tomli>=2.0.1; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "cerberus>=1.3.5",
    "packaging>=23.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.1",
    "ruff>=0.1.0",
]

[project.scripts]
raiku = "cli.main:main"

[project.urls]
Homepage = "https://github.com/SGizek/Raiku"
Repository = "https://github.com/SGizek/Raiku"
Issues = "https://github.com/SGizek/Raiku/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "core*", "parser*", "installer*", "validator*", "index*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
